# lnovel

./: Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  deps.py  logging_config.py  main.py
backend/app/db/: engine.py  migrations.py  schema.sql
backend/app/llm/: code_fence.py  json_schema.py  llm_client.py  model_catalog.py  models.py  ollama_catalog.py  openrouter_client.py  provider_config.py  token_budget.py
backend/app/llm/prompts/: book_outline.py  chapter_plan.py  chapter_prose.py  entity_improve.py  premise_generate.py  rolling_summary.py
backend/app/routers/: chapter_plan.py  chapter_prose.py  chapters.py  entities.py  entity_chat.py  models.py  novel_outline.py  novel_premise.py  novels.py  settings.py
backend/app/schemas/: chapter_plan.py  chapter_prose.py  chapters.py  entities.py  entity_chat.py  models.py  novel_outline.py  novel_premise.py  novels.py  settings.py
backend/scripts/: smoke.py  smoke_chapter_plan.py  smoke_chapter_prose.py  smoke_chat.py
backend/tests/: conftest.py  test_chapters_api.py  test_code_fence.py  test_migrations.py  test_prompts.py  test_token_budget.py
docs/: design.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chapterPlan.ts  chapterProse.ts  chapters.ts  client.ts  entities.ts  entityChat.ts  models.ts  novelOutline.ts  novelPremise.ts  novels.ts  settings.ts  types.ts
frontend/src/components/: EmptyState.tsx  EntityChatPanel.tsx  EntityForm.tsx  PageLoading.tsx
(+14 files in other folders)
