[project]
name = "lnovel-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]
